scripts/nullaway/wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8.txt
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/legacy/parser/character/LeftRec.java:70: error: [NullAway] assigning @Nullable expression to @NonNull field
            value = null;
                  ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/legacy/parser/Transition.java:18: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.target = target;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/legacy/parser/State.java:76: error: [NullAway] dereferenced expression current is @Nullable
            current = current.addTermTransition(t.charAt(i), headNontermId, generator);
                             ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/common/CharHashMap.java:60: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return entry == null ? null : entry.value;
        ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/common/CharHashMap.java:165: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.next = null;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/common/CharHashMap.java:228: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        map.put(c, null);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/common/CharHashMap.java:229: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        map.put('们', null);
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/legacy/parser/GraphStack.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.last = last;
                  ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/legacy/parser/Grammar.java:18: error: [NullAway] assigning @Nullable expression to @NonNull field
        topHead = define();
                ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/legacy/parser/ParserBuilder.java:32: error: [NullAway] dereferenced expression current is @Nullable
                        current = current.addNontermTransition(n.id, head.id, stateGenerator);
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/legacy/parser/ParserBuilder.java:35: error: [NullAway] dereferenced expression current is @Nullable
                    current = current.addTermTransition(symbol.name(), head.id, stateGenerator);
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/legacy/parser/ParserBuilder.java:41: error: [NullAway] dereferenced expression current is @Nullable
            current.setAcceptedNonterm(head.id);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/legacy/regex/AbstractRegex.java:40: error: [NullAway] dereferenced expression child is @Nullable
        child.print(indent + 4);
             ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/task/Waiter.java:58: error: [NullAway] assigning @Nullable expression to @NonNull field
            result = (TResult) state;
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/task/Waiter.java:62: error: [NullAway] passing @Nullable parameter 'state' where @NonNull is required
        cont.apply(state, this, scheduler);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/task/Func1Task.java:19: error: [NullAway] passing @Nullable parameter '(T) state' where @NonNull is required
        cont.apply(func.apply((T) state), this, scheduler);
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/task/FlattenTask.java:22: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return (TResult) value;
        ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/task/ContextTask.java:24: error: [NullAway] passing @Nullable parameter '(T) state' where @NonNull is required
        Context<T, TResult> context = new Context<T, TResult>((T) state, cont, this, scheduler);
                                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/task/ContextSeqTask.java:20: error: [NullAway] passing @Nullable parameter '(AResult) state' where @NonNull is required
        Context<AResult, TResult> context = new Context<AResult, TResult>((AResult) state, cont, this, scheduler);
                                                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/task/Func1SeqTask.java:20: error: [NullAway] passing @Nullable parameter '(T) value' where @NonNull is required
        return func.apply((T) value);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/lang/ast/Type.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.inType = inType;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/lang/ast/Type.java:17: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.outType = outType;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/stack/LinkedStack.java:14: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.top = top;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/stack/LinkedStack.java:53: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.parent = parent;
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/lexer/TokenType.java:54: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.value = value;
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/lexer/TokenStream.java:28: error: [NullAway] method returns @Nullable, but superclass method mi.stream.IStream.poll() returns @NonNull
    public @org.checkerframework.checker.initialization.qual.FBCBottom @org.checkerframework.checker.nullness.qual.Nullable Token poll(@org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull TokenStream this) {
                                                                                                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/regex/AbstractRegex.java:42: error: [NullAway] dereferenced expression child is @Nullable
        child.print(indent + 4);
             ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
27 errors
